--- a/sh/index.html
+++ b/sh/index.html
@@ -6,20 +6,8 @@
     <title>页面跳转</title>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            // 随机密码生成
-            const generatePassword = () => {
-                const charset = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-                let password = "";
-                for (let i = 0; i < 8; i++) { // 密码长度为 8
-                    const randomIndex = Math.floor(Math.random() * charset.length);
-                    password += charset[randomIndex];
-                }
-                return password;
-            };
-
-            // 生成随机密码
-            const randomPassword = generatePassword();
-            console.log("随机密码（调试用）：", randomPassword); // 仅供调试，正式上线时移除
+            // 设置固定密码
+            const fixedPassword = "990275";
 
             // 校验密码并跳转
             document.getElementById("submit-button").addEventListener("click", function (event) {
@@ -27,7 +15,7 @@
 
                 const userPassword = document.getElementById("password").value;
 
-                if (userPassword === randomPassword) {
+                if (userPassword === fixedPassword) {
                     // 判断 User-Agent 并跳转
                     const userAgent = navigator.userAgent || navigator.vendor || window.opera;
                     if (/douyinecommerce|BytedanceWebview|TTWebView|AppName\/douyinecommerce/i.test(userAgent)) {
