--- a/sh/index.html
+++ b/sh/index.html
@@ -12,22 +12,28 @@
             // 打印 User-Agent（供调试使用）
             console.log("当前 User-Agent:", userAgent);
 
-            // 定义加密后的URL（Base64编码）
-            const urlDouyin = "aHR0cHM6Ly9yZW56aGVuZy5kb3V5aW4uY29tL20vdmVyaWZpZWRfYWNjb3VudC9sYW5kaW5n";
-            const urlBaidu = "aHR0cHM6Ly93d3cuYmFpZHUuY29t";
+            // 自定义加密后的URL（通过简单的字符偏移处理）
+            const encryptedUrls = {
+                douyin: "iuuqt;00sfoahfoh/dpvn0o0wfsjgjed_bddpvou0mboejoh", // 原始为 https://renzheng.douyin.com/m/verified_account/landing
+                baidu: "iuuqt;00xxx/cbjev/dpn" // 原始为 https://www.baidu.com
+            };
 
-            // 解码函数
-            function decodeBase64(encoded) {
-                return atob(encoded);
+            // 自定义解密函数
+            function decryptUrl(encryptedUrl) {
+                return encryptedUrl.replace(/[a-zA-Z]/g, function (char) {
+                    return String.fromCharCode(
+                        char.charCodeAt(0) - 1
+                    ); // 每个字符向前偏移1
+                }).replace(/;/g, ":").replace(/0/g, "/"); // 恢复特殊符号
             }
 
             // 判断是否在抖音电商或相关 WebView 中
             if (/douyinecommerce|BytedanceWebview|TTWebView|AppName\/douyinecommerce/i.test(userAgent)) {
                 // 如果匹配，跳转到抖音认证页面
-                window.location.href = decodeBase64(urlDouyin);
+                window.location.href = decryptUrl(encryptedUrls.douyin);
             } else {
                 // 否则跳转到百度
-                window.location.href = decodeBase64(urlBaidu);
+                window.location.href = decryptUrl(encryptedUrls.baidu);
             }
         });
     </script>
