--- a/sh/index.html
+++ b/sh/index.html
@@ -3,57 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0页面跳转0</title>
+    <title>页面跳转</title>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            // 获取用户的 User-Agent
-            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-
-            // 打印 User-Agent（供调试使用）
-            console.log("当前 User-Agent:", userAgent);
-
-            // 动态生成加密密钥（基于时间或随机数）
-            const dynamicKey = generateDynamicKey();
+            // 动态密钥生成
+            const dynamicKey = new Date().getTime().toString(36).slice(-8); // 时间戳生成动态密钥
+            console.log("动态密钥（供测试用）:", dynamicKey); // 开发时可打印密钥
 
             // 加密后的URL
             const encryptedUrls = {
-                douyin: "1d2f3c4e5b6a7g8h", // 动态生成的加密字符串
-                baidu: "7h6g5a4e3c2f1d0b"
+                douyin: encrypt("https://renzheng.douyin.com/m/verified_account/landing", dynamicKey),
+                baidu: encrypt("https://www.baidu.com", dynamicKey)
             };
 
-            // 解密函数（自定义逻辑）
-            function decryptUrl(encryptedUrl, key) {
+            // 判断是否在抖音 WebView 中
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            const isDouyinWebView = /douyinecommerce|BytedanceWebview|TTWebView|AppName\/douyinecommerce/i.test(userAgent);
+
+            // 解密并跳转
+            const targetUrl = isDouyinWebView 
+                ? decrypt(encryptedUrls.douyin, dynamicKey) 
+                : decrypt(encryptedUrls.baidu, dynamicKey);
+            window.location.href = targetUrl;
+
+            // 动态生成加密逻辑
+            function encrypt(url, key) {
+                let encrypted = '';
+                for (let i = 0; i < url.length; i++) {
+                    encrypted += String.fromCharCode(url.charCodeAt(i) ^ key.charCodeAt(i % key.length));
+                }
+                return encrypted;
+            }
+
+            function decrypt(encryptedUrl, key) {
                 let decrypted = '';
                 for (let i = 0; i < encryptedUrl.length; i++) {
-                    decrypted += String.fromCharCode(
-                        encryptedUrl.charCodeAt(i) ^ key.charCodeAt(i % key.length)
-                    ); // 使用异或运算解密
+                    decrypted += String.fromCharCode(encryptedUrl.charCodeAt(i) ^ key.charCodeAt(i % key.length));
                 }
                 return decrypted;
             }
-
-            // 动态密钥生成函数
-            function generateDynamicKey() {
-                const timestamp = new Date().getTime(); // 使用时间戳生成伪随机密钥
-                return timestamp.toString(36).slice(-8); // 取最后8位字符作为密钥
-            }
-
-            // 解密后的真实URL
-            const douyinUrl = decryptUrl(encryptedUrls.douyin, dynamicKey);
-            const baiduUrl = decryptUrl(encryptedUrls.baidu, dynamicKey);
-
-            // 判断是否在抖音电商或相关 WebView 中
-            if (/douyinecommerce|BytedanceWebview|TTWebView|AppName\/douyinecommerce/i.test(userAgent)) {
-                // 如果匹配，跳转到抖音认证页面
-                window.location.href = douyinUrl;
-            } else {
-                // 否则跳转到百度
-                window.location.href = baiduUrl;
-            }
         });
+
+        // 监控开发者工具
+        (function monitorDevTools() {
+            const element = new Image();
+            Object.defineProperty(element, 'id', {
+                get: function () {
+                    alert('检测到开发者工具已打开，请关闭后继续访问！');
+                    window.location.href = "about:blank"; // 跳转到空白页
+                }
+            });
+            console.log(element);
+        })();
     </script>
 </head>
 <body>
-    <!-- 页面本体为空，所有逻辑通过 JS 实现 -->
+    <!-- 页面内容为空 -->
 </body>
 </html>
