--- a/sh/index.html
+++ b/sh/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>页面跳转</title>
+    <title>8页面跳转8</title>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // 动态密钥生成
