--- a/index.html
+++ b/index.html
@@ -5,50 +5,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>除夕夜祝福</title>
     <style>
+        /* 全局样式 */
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #fef6e4;
+            font-family: "Microsoft YaHei", Arial, sans-serif;
+            background: linear-gradient(to bottom, #ffecd2, #fcb69f);
             color: #333;
             margin: 0;
             padding: 0;
         }
+
+        /* 顶部标题样式 */
         header {
-            background-color: #f08080;
+            background-color: #ff6f61;
             color: white;
             padding: 20px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            text-align: center;
         }
+
         h1 {
             margin: 0;
+            font-size: 2.5rem;
+            letter-spacing: 2px;
         }
+
+        /* 主体内容 */
+        main {
+            text-align: center;
+            padding: 30px 15px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            margin: 10px 0 30px;
+            color: #555;
+        }
+
+        /* 图片样式 */
         img {
-            width: 50%;
+            width: 60%;
+            max-width: 500px;
             height: auto;
-            margin-top: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s;
         }
+
+        img:hover {
+            transform: scale(1.05);
+        }
+
+        /* 按钮样式 */
         button {
             margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 12px 30px;
+            font-size: 1rem;
+            font-weight: bold;
             color: white;
-            background-color: #f08080;
+            background-color: #ff6f61;
             border: none;
-            border-radius: 5px;
+            border-radius: 25px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             cursor: pointer;
+            transition: all 0.3s;
         }
+
         button:hover {
-            background-color: #c06060;
+            background-color: #e05550;
+            transform: translateY(-3px);
+        }
+
+        button:active {
+            transform: translateY(2px);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        /* 脚注样式 */
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 30px;
+            background-color: #ffd6cc;
+            color: #333;
+            font-size: 0.9rem;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>除夕夜快乐！</h1>
+        <h1>除夕夜祝福</h1>
     </header>
     <main>
-        <p>新春将至，愿你平安喜乐，万事如意！</p>
-        <img src="https://via.placeholder.com/600x400" alt="新春图片">
-        <button onclick="alert('祝福送给你：新年快乐，心想事成！')">点击领取祝福</button>
+        <p>新年将至，愿你阖家幸福，万事如意！</p>
+        <img src="https://via.placeholder.com/600x400" alt="新春快乐">
+        <button onclick="alert('祝福送给你：愿你新年吉祥如意！')">点击领取祝福</button>
     </main>
+    <footer>
+        © 2025 除夕夜祝福 | 愿您新年快乐！
+    </footer>
 </body>
 </html>
