--- a/gc.html
+++ b/gc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小口子军港工程土石方运输要求</title>
+    <title>工程运输要求</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
@@ -12,12 +12,13 @@
             line-height: 1.6;
             color: #333;
             max-width: 100%;
-            font-size: 16px; /* 适合手机阅读 */
+            font-size: 16px;
         }
         h1 {
             font-size: 22px;
             color: #2c3e50;
-            margin-bottom: 15px;
+            text-align: center;
+            margin-bottom: 20px;
         }
         h2 {
             font-size: 18px;
@@ -32,7 +33,28 @@
             margin-bottom: 8px;
         }
         .section {
+            display: none;
             margin-bottom: 20px;
+        }
+        .section.active {
+            display: block;
+        }
+        .selector {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        button {
+            padding: 10px 20px;
+            margin: 5px;
+            font-size: 16px;
+            border: 1px solid #2c3e50;
+            border-radius: 5px;
+            background: #f8f9fa;
+            cursor: pointer;
+        }
+        button.active {
+            background: #2c3e50;
+            color: white;
         }
         @media (max-width: 600px) {
             body {
@@ -44,35 +66,75 @@
             h2 {
                 font-size: 16px;
             }
+            button {
+                font-size: 14px;
+                padding: 8px 15px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>小口子军港工程土石方运输要求</h1>
+    <h1>工程运输要求</h1>
+    <div class="selector">
+        <button onclick="showSection('xiaokouzi')" class="active">小口子军港</button>
+        <button onclick="showSection('lianyungang')">连云港填海</button>
+    </div>
 
-    <div class="section">
-        <h2>车辆要求</h2>
+    <div id="xiaokouzi" class="section active">
+        <h2>小口子军港工程</h2>
         <ul>
-            <li><strong>车厢尺寸</strong>：
+            <li><strong>车辆要求</strong>：
                 <ul>
-                    <li>长度：8.2 米</li>
-                    <li>宽度：2.35 米</li>
-                    <li>高度：1.8 米</li>
+                    <li>车厢尺寸：长 8.2m × 宽 2.35m × 高 1.8m</li>
+                    <li>净重：≥ 60 吨</li>
                 </ul>
             </li>
-            <li><strong>净重</strong>：60 吨以上</li>
+            <li><strong>运输价格</strong>：
+                <ul>
+                    <li>距离：65 公里</li>
+                    <li>价格：1300 元/趟</li>
+                    <li>结算：日结</li>
+                    <li>作业：24 小时</li>
+                    <li>其他：甲方负责食宿及路保</li>
+                </ul>
+            </li>
         </ul>
     </div>
 
-    <div class="section">
-        <h2>运输价格</h2>
+    <div id="lianyungang" class="section">
+        <h2>连云港填海工程</h2>
         <ul>
-            <li><strong>结算方式</strong>：日结</li>
-            <li><strong>运输距离</strong>：65 公里</li>
-            <li><strong>每趟价格</strong>：1300 元</li>
-            <li><strong>作业时间</strong>：24 小时作业</li>
-            <li><strong>其他</strong>：甲方负责食宿及路保</li>
+            <li><strong>项目概述</strong>：运输碎石</li>
+            <li><strong>车辆要求</strong>：
+                <ul>
+                    <li>车型：前四后八</li>
+                    <li>车厢尺寸：长 8.2m 至 8.6m × 高 1.8m</li>
+                    <li>净重：≥ 60 吨</li>
+                </ul>
+            </li>
+            <li><strong>运输价格</strong>：
+                <ul>
+                    <li>距离：70 公里 ± 2 公里</li>
+                    <li>价格：15 元/吨</li>
+                    <li>结算：日结</li>
+                    <li>其他：甲方负责食宿、油费及路保</li>
+                </ul>
+            </li>
+            <li><strong>备注</strong>：从速报备，具体以合同为准</li>
         </ul>
     </div>
+
+    <script>
+        function showSection(sectionId) {
+            document.querySelectorAll('.section').forEach(section => {
+                section.classList.remove('active');
+            });
+            document.getElementById(sectionId).classList.add('active');
+            document.querySelectorAll('button').forEach(btn => {
+                btn.classList.remove('active');
+            });
+            document.querySelector(`button[onclick="showSection('${sectionId}')"]`).classList.add('active');
+        }
+    </script>
 </body>
 </html>
