--- a/gc.html
+++ b/gc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>6月23日工程运输公示</title>
+    <title>工程运输公示</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
@@ -74,7 +74,7 @@
     </style>
 </head>
 <body>
-    <h1>工程运输要求</h1>
+    <h1>6月23日</h1>
     <div class="selector">
         <button onclick="showSection('xiaokouzi')" class="active">小口子军港</button>
         <button onclick="showSection('lianyungang')">连云港填海</button>
