--- a/gc.html
+++ b/gc.html
@@ -85,7 +85,7 @@
         <ul>
             <li><strong>车辆要求</strong>：
                 <ul>
-                    <li>车厢尺寸：长 8.2m × 宽 2.35m × 高 1.8m</li>
+                    <li>8.2m 至 8.6m 箱高 1.8m</li>
                     <li>净重：≥ 60 吨</li>
                 </ul>
             </li>
@@ -107,9 +107,9 @@
             <li><strong>项目概述</strong>：运输碎石</li>
             <li><strong>车辆要求</strong>：
                 <ul>
-                    <li>车型：前四后八</li>
-                    <li>车厢尺寸：长 8.2m 至 8.6m × 高 1.8m</li>
+                    <li>8.2m 至 8.6m 箱高 1.8m</li>
                     <li>净重：≥ 60 吨</li>
+                    <li>颜色要求：绿色</li>
                 </ul>
             </li>
             <li><strong>运输价格</strong>：
