--- a/gc.html
+++ b/gc.html
@@ -56,6 +56,12 @@
             background: #2c3e50;
             color: white;
         }
+        .contact {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 16px;
+            color: #2c3e50;
+        }
         @media (max-width: 600px) {
             body {
                 font-size: 14px;
@@ -69,6 +75,9 @@
             button {
                 font-size: 14px;
                 padding: 8px 15px;
+            }
+            .contact {
+                font-size: 14px;
             }
         }
     </style>
@@ -85,7 +94,7 @@
         <ul>
             <li><strong>车辆要求</strong>：
                 <ul>
-                    <li>8.2m 至 8.6m 箱高 1.8m</li>
+                    <li>规格：8.2m 至 8.6m 箱高 1.8m</li>
                     <li>净重：≥ 60 吨</li>
                 </ul>
             </li>
@@ -107,7 +116,7 @@
             <li><strong>项目概述</strong>：运输碎石</li>
             <li><strong>车辆要求</strong>：
                 <ul>
-                    <li>8.2m 至 8.6m 箱高 1.8m</li>
+                    <li>规格：8.2m 至 8.6m 箱高 1.8m</li>
                     <li>净重：≥ 60 吨</li>
                     <li>颜色要求：绿色</li>
                 </ul>
@@ -122,6 +131,10 @@
             </li>
             <li><strong>备注</strong>：从速报备，具体以合同为准</li>
         </ul>
+    </div>
+
+    <div class="contact">
+        <strong>联系方式</strong>：郭 13705366364（微信同号）
     </div>
 
     <script>
