--- a/gcgpt.html
+++ b/gcgpt.html
@@ -1,181 +1,194 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>工程运输公示</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
-            margin: 15px;
-            padding: 0;
-            line-height: 1.6;
-            color: #333;
-            background: #f5f7fa;
-            font-size: 16px;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>工程运输公示</title>
+  <style>
+    :root {
+      --primary: #2c3e50;
+      --accent: #3498db;
+      --accent-hover: #2980b9;
+      --active-bg: #2ecc71;
+      --active-hover: #27ae60;
+      --text: #333;
+      --bg: #f0f2f5;
+      --card-bg: #fff;
+    }
 
-        h1 {
-            font-size: 24px;
-            color: #2c3e50;
-            text-align: center;
-            margin: 25px 0 20px;
-        }
+    * {
+      box-sizing: border-box;
+    }
 
-        h2 {
-            font-size: 18px;
-            color: #34495e;
-            margin: 15px 0 10px;
-        }
+    body {
+      margin: 0;
+      padding: 0 15px;
+      font-family: "Segoe UI", Roboto, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      font-size: 16px;
+      line-height: 1.6;
+    }
 
-        ul {
-            padding-left: 20px;
-            margin: 10px 0;
-        }
+    h1 {
+      text-align: center;
+      font-size: 26px;
+      color: var(--primary);
+      margin: 30px 0 20px;
+    }
 
-        li {
-            margin-bottom: 8px;
-        }
+    .selector {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+      margin-bottom: 25px;
+      flex-wrap: wrap;
+    }
 
-        .section {
-            display: none;
-            margin-bottom: 20px;
-            background: white;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-        }
+    .selector button {
+      padding: 10px 25px;
+      border: none;
+      border-radius: 25px;
+      font-size: 16px;
+      font-weight: bold;
+      background: linear-gradient(to right, var(--accent), #5dade2);
+      color: white;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-        .section.active {
-            display: block;
-        }
+    .selector button:hover {
+      background: linear-gradient(to right, var(--accent-hover), #3498db);
+      transform: translateY(-1px);
+    }
 
-        .selector {
-            text-align: center;
-            margin-bottom: 25px;
-        }
+    .selector button.active {
+      background: linear-gradient(to right, var(--active-bg), var(--active-hover));
+    }
 
-        button {
-            padding: 10px 24px;
-            margin: 5px;
-            font-size: 16px;
-            font-weight: bold;
-            border: none;
-            border-radius: 25px;
-            background: linear-gradient(135deg, #3498db, #2980b9);
-            color: #fff;
-            cursor: pointer;
-            transition: background 0.3s ease, transform 0.2s ease;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-        }
+    .section {
+      display: none;
+      background: var(--card-bg);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.06);
+      margin-bottom: 25px;
+      animation: fadeIn 0.4s ease;
+    }
 
-        button:hover {
-            background: linear-gradient(135deg, #2980b9, #1c639e);
-            transform: translateY(-2px);
-        }
+    .section.active {
+      display: block;
+    }
 
-        button.active {
-            background: linear-gradient(135deg, #2ecc71, #27ae60);
-            color: white;
-        }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-        .contact {
-            text-align: center;
-            margin-top: 30px;
-            font-size: 16px;
-            color: #2c3e50;
-        }
+    h2 {
+      font-size: 20px;
+      margin-bottom: 15px;
+      color: var(--primary);
+      border-bottom: 1px solid #e0e0e0;
+      padding-bottom: 5px;
+    }
 
-        @media (max-width: 600px) {
-            body {
-                font-size: 14px;
-            }
+    ul {
+      padding-left: 20px;
+    }
 
-            h1 {
-                font-size: 20px;
-            }
+    li {
+      margin-bottom: 10px;
+    }
 
-            h2 {
-                font-size: 16px;
-            }
+    .contact {
+      text-align: center;
+      margin: 40px 0 20px;
+      font-size: 16px;
+      color: var(--primary);
+    }
 
-            button {
-                font-size: 14px;
-                padding: 8px 18px;
-            }
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 22px;
+      }
 
-            .contact {
-                font-size: 14px;
-            }
-        }
-    </style>
+      h2 {
+        font-size: 18px;
+      }
+
+      .selector button {
+        padding: 8px 18px;
+        font-size: 14px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h1>6月23日</h1>
-    <div class="selector">
-        <button onclick="showSection('xiaokouzi')" class="active">小口子军港</button>
-        <button onclick="showSection('lianyungang')">连云港填海</button>
-    </div>
+  <h1>6月23日 工程运输公示</h1>
 
-    <div id="xiaokouzi" class="section active">
-        <h2>小口子军港工程</h2>
-        <ul>
-            <li><strong>车辆要求</strong>：
-                <ul>
-                    <li>规格：8.2m 至 8.6m 箱高 1.8m</li>
-                    <li>净重：≥ 60 吨</li>
-                </ul>
-            </li>
-            <li><strong>运输价格</strong>：
-                <ul>
-                    <li>距离：65 公里</li>
-                    <li>价格：1300 元/趟</li>
-                    <li>结算：日结</li>
-                    <li>作业：24 小时</li>
-                    <li>其他：甲方负责食宿及路保</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+  <div class="selector">
+    <button onclick="showSection('xiaokouzi')" class="active">小口子军港</button>
+    <button onclick="showSection('lianyungang')">连云港填海</button>
+  </div>
 
-    <div id="lianyungang" class="section">
-        <h2>连云港填海工程</h2>
-        <ul>
-            <li><strong>项目概述</strong>：运输碎石</li>
-            <li><strong>车辆要求</strong>：
-                <ul>
-                    <li>规格：8.2m 至 8.6m 箱高 1.8m</li>
-                    <li>净重：≥ 60 吨</li>
-                    <li>颜色要求：绿色</li>
-                </ul>
-            </li>
-            <li><strong>运输价格</strong>：
-                <ul>
-                    <li>距离：70 公里 ± 2 公里</li>
-                    <li>价格：15 元/吨</li>
-                    <li>结算：日结</li>
-                    <li>其他：甲方负责食宿、油费及路保</li>
-                </ul>
-            </li>
-            <li><strong>备注</strong>：从速报备，具体以合同为准</li>
-        </ul>
-    </div>
+  <div id="xiaokouzi" class="section active">
+    <h2>小口子军港工程</h2>
+    <ul>
+      <li><strong>车辆要求：</strong>
+        <ul>
+          <li>规格：8.2m 至 8.6m，箱高 1.8m</li>
+          <li>净重：≥ 60 吨</li>
+        </ul>
+      </li>
+      <li><strong>运输价格：</strong>
+        <ul>
+          <li>距离：65 公里</li>
+          <li>价格：1300 元/趟</li>
+          <li>结算：日结</li>
+          <li>作业：24 小时</li>
+          <li>其他：甲方负责食宿及路保</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 
-    <div class="contact">
-        <strong>联系方式</strong>：郭 13705366364（微信同号）
-    </div>
+  <div id="lianyungang" class="section">
+    <h2>连云港填海工程</h2>
+    <ul>
+      <li><strong>项目概述：</strong>运输碎石</li>
+      <li><strong>车辆要求：</strong>
+        <ul>
+          <li>规格：8.2m 至 8.6m，箱高 1.8m</li>
+          <li>净重：≥ 60 吨</li>
+          <li>颜色要求：绿色</li>
+        </ul>
+      </li>
+      <li><strong>运输价格：</strong>
+        <ul>
+          <li>距离：70 公里 ±2 公里</li>
+          <li>价格：15 元/吨</li>
+          <li>结算：日结</li>
+          <li>其他：甲方负责食宿、油费及路保</li>
+        </ul>
+      </li>
+      <li><strong>备注：</strong>从速报备，具体以合同为准</li>
+    </ul>
+  </div>
 
-    <script>
-        function showSection(sectionId) {
-            document.querySelectorAll('.section').forEach(section => {
-                section.classList.remove('active');
-            });
-            document.getElementById(sectionId).classList.add('active');
-            document.querySelectorAll('button').forEach(btn => {
-                btn.classList.remove('active');
-            });
-            document.querySelector(`button[onclick="showSection('${sectionId}')"]`).classList.add('active');
-        }
-    </script>
+  <div class="contact">
+    <strong>联系方式：</strong> 郭 13705366364（微信同号）
+  </div>
+
+  <script>
+    function showSection(id) {
+      document.querySelectorAll('.section').forEach(el => el.classList.remove('active'));
+      document.querySelector(`#${id}`).classList.add('active');
+
+      document.querySelectorAll('.selector button').forEach(btn => btn.classList.remove('active'));
+      document.querySelector(`.selector button[onclick="showSection('${id}')"]`).classList.add('active');
+    }
+  </script>
 </body>
 </html>
